# sh_gui

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: params.yaml
launch/: gui.launch.py
scripts/: ClickableImage.py  CornerCalibrationPage.py  DoublyLinkedList.py  FollowHubSubpage.py  Gui.py  GuiController.py  GuiNode.py  GuiUtils.py  LabeledSliderSubpage.py  MorningCountdownSubpage.py  ProposedCornersImage.py  QueuedYouTubeVideo.py  ScreenColorCoordination.py  SoundFilePlaybackPage.py  StackedPageGroup.py  YouTubeVideoListing.py  YouTubeVideoResult.py
sh_gui/: sh_gui.py
style/: constants.sass  stylesheet.qss
ui/: CornerCalibrationPage.ui  FollowHubSubpage.ui  Gui.ui  LabeledSliderSubpage.ui  MorningCountdownSubpage.ui  QueuedYouTubeVideo.ui  ScreenColorCoordination.ui  SoundFilePlaybackPage.ui  YouTubeVideoListing.ui  YouTubeVideoResult.ui
