<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>sh_gui</name>
    <version>0.0.0</version>
    <description>The GUI to interact with the smart home.</description>
    <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
    <license>BSD</license>
    <author email="rnvandemark@gmail.com">R. Nick Vandemark</author>

    <buildtool_depend>ament_python</buildtool_depend>

    <build_depend>rclpy</build_depend>
    <build_depend>sh_common_interfaces</build_depend>
    <build_depend>sh_sfp_interfaces</build_depend>
    <build_depend>sh_scc_interfaces</build_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>sh_common_interfaces</exec_depend>
    <exec_depend>sh_sfp_interfaces</exec_depend>
    <exec_depend>sh_scc_interfaces</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
